parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> variables_block statements
Rule 2     program -> statements
Rule 3     variables_block -> var LLAVE_ABRE variables_list LLAVE_CIERRA
Rule 4     variables_list -> variables_list variable_declaration
Rule 5     variables_list -> variable_declaration
Rule 6     variable_declaration -> variable_type variables_names PUNTO_COMA
Rule 7     variables_names -> variables_names COMA ID
Rule 8     variables_names -> ID
Rule 9     variable_type -> int
Rule 10    variable_type -> real
Rule 11    variable_type -> string
Rule 12    variable_type -> bool
Rule 13    statements -> statement
Rule 14    statements -> statements statement
Rule 15    statement -> assignment_statement
Rule 16    statement -> select_statement
Rule 17    statement -> while_statement
Rule 18    statement -> in_statement
Rule 19    statement -> out_statement
Rule 20    while_statement -> while logical_statement LLAVE_ABRE statements LLAVE_CIERRA
Rule 21    select_statement -> if_statement else_if_statement
Rule 22    select_statement -> if_statement
Rule 23    if_statement -> if logical_statement LLAVE_ABRE statements LLAVE_CIERRA
Rule 24    else_if_statement -> else if_statement
Rule 25    else_if_statement -> else_if_statement else if_statement
Rule 26    else_if_statement -> else_if_statement else_statement
Rule 27    else_statement -> else LLAVE_ABRE statements LLAVE_CIERRA
Rule 28    out_statement -> out str_expression PUNTO_COMA
Rule 29    in_statement -> in ID PUNTO_COMA
Rule 30    expression -> expression OP_SUMA term
Rule 31    expression -> expression OP_RESTA term
Rule 32    expression -> OP_RESTA term
Rule 33    expression -> term
Rule 34    term -> term OP_MULTIPLICACION factor
Rule 35    term -> term OP_DIVISION factor
Rule 36    term -> factor
Rule 37    factor -> CTE_NUMERICA
Rule 38    factor -> CTE_REAL
Rule 39    factor -> ID
Rule 40    factor -> PARENTESIS_ABRE expression PARENTESIS_CIERRA
Rule 41    str_expression -> str_term OP_CONCAT str_term
Rule 42    str_expression -> str_term
Rule 43    str_term -> CTE_STRING
Rule 44    str_term -> ID
Rule 45    comparision -> expression op_comparision expression
Rule 46    comparision -> str_expression op_comparision str_expression
Rule 47    op_comparision -> COMP_MENOR
Rule 48    op_comparision -> COMP_MAYOR
Rule 49    op_comparision -> COMP_MENOR_IGUAL
Rule 50    op_comparision -> COMP_MAYOR_IGUAL
Rule 51    op_comparision -> COMP_IGUAL
Rule 52    op_comparision -> COMP_DISTINTO
Rule 53    logical_statement -> logical_expression
Rule 54    logical_statement -> logical_expression op_logic logical_expression
Rule 55    logical_expression -> OP_NOT logical_term
Rule 56    logical_expression -> logical_term
Rule 57    logical_term -> comparision
Rule 58    logical_term -> between_statement
Rule 59    logical_term -> cte_logic
Rule 60    op_logic -> OP_OR
Rule 61    op_logic -> OP_AND
Rule 62    cte_logic -> true
Rule 63    cte_logic -> false
Rule 64    between_statement -> between PARENTESIS_ABRE ID COMA expression DOS_PUNTOS expression PARENTESIS_CIERRA
Rule 65    assignment_statement -> ID OP_ASIGNACION assignment_value PUNTO_COMA
Rule 66    assignment_value -> ternary
Rule 67    assignment_value -> expression
Rule 68    assignment_value -> str_expression
Rule 69    assignment_value -> logical_statement
Rule 70    ternary -> logical_statement CONDICION_TERNARIA expression DOS_PUNTOS expression
Rule 71    ternary -> logical_statement CONDICION_TERNARIA str_expression DOS_PUNTOS str_expression

Terminals, with rules where they appear

COMA                 : 7 64
COMP_DISTINTO        : 52
COMP_IGUAL           : 51
COMP_MAYOR           : 48
COMP_MAYOR_IGUAL     : 50
COMP_MENOR           : 47
COMP_MENOR_IGUAL     : 49
CONDICION_TERNARIA   : 70 71
CTE_NUMERICA         : 37
CTE_REAL             : 38
CTE_STRING           : 43
DOS_PUNTOS           : 64 70 71
ID                   : 7 8 29 39 44 64 65
LLAVE_ABRE           : 3 20 23 27
LLAVE_CIERRA         : 3 20 23 27
OP_AND               : 61
OP_ASIGNACION        : 65
OP_CONCAT            : 41
OP_DIVISION          : 35
OP_MULTIPLICACION    : 34
OP_NOT               : 55
OP_OR                : 60
OP_RESTA             : 31 32
OP_SUMA              : 30
PARENTESIS_ABRE      : 40 64
PARENTESIS_CIERRA    : 40 64
PUNTO_COMA           : 6 28 29 65
between              : 64
bool                 : 12
else                 : 24 25 27
error                : 
false                : 63
if                   : 23
in                   : 29
int                  : 9
out                  : 28
real                 : 10
string               : 11
true                 : 62
var                  : 3
while                : 20

Nonterminals, with rules where they appear

assignment_statement : 15
assignment_value     : 65
between_statement    : 58
comparision          : 57
cte_logic            : 59
else_if_statement    : 21 25 26
else_statement       : 26
expression           : 30 31 40 45 45 64 64 67 70 70
factor               : 34 35 36
if_statement         : 21 22 24 25
in_statement         : 18
logical_expression   : 53 54 54
logical_statement    : 20 23 69 70 71
logical_term         : 55 56
op_comparision       : 45 46
op_logic             : 54
out_statement        : 19
program              : 0
select_statement     : 16
statement            : 13 14
statements           : 1 2 14 20 23 27
str_expression       : 28 46 46 68 71 71
str_term             : 41 41 42
term                 : 30 31 32 33 34 35
ternary              : 66
variable_declaration : 4 5
variable_type        : 6
variables_block      : 1
variables_list       : 3 4
variables_names      : 6 7
while_statement      : 17

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . variables_block statements
    (2) program -> . statements
    (3) variables_block -> . var LLAVE_ABRE variables_list LLAVE_CIERRA
    (13) statements -> . statement
    (14) statements -> . statements statement
    (15) statement -> . assignment_statement
    (16) statement -> . select_statement
    (17) statement -> . while_statement
    (18) statement -> . in_statement
    (19) statement -> . out_statement
    (65) assignment_statement -> . ID OP_ASIGNACION assignment_value PUNTO_COMA
    (21) select_statement -> . if_statement else_if_statement
    (22) select_statement -> . if_statement
    (20) while_statement -> . while logical_statement LLAVE_ABRE statements LLAVE_CIERRA
    (29) in_statement -> . in ID PUNTO_COMA
    (28) out_statement -> . out str_expression PUNTO_COMA
    (23) if_statement -> . if logical_statement LLAVE_ABRE statements LLAVE_CIERRA

    var             shift and go to state 4
    ID              shift and go to state 11
    while           shift and go to state 13
    in              shift and go to state 14
    out             shift and go to state 15
    if              shift and go to state 16

    program                        shift and go to state 1
    variables_block                shift and go to state 2
    statements                     shift and go to state 3
    statement                      shift and go to state 5
    assignment_statement           shift and go to state 6
    select_statement               shift and go to state 7
    while_statement                shift and go to state 8
    in_statement                   shift and go to state 9
    out_statement                  shift and go to state 10
    if_statement                   shift and go to state 12

state 1

    (0) S' -> program .



state 2

    (1) program -> variables_block . statements
    (13) statements -> . statement
    (14) statements -> . statements statement
    (15) statement -> . assignment_statement
    (16) statement -> . select_statement
    (17) statement -> . while_statement
    (18) statement -> . in_statement
    (19) statement -> . out_statement
    (65) assignment_statement -> . ID OP_ASIGNACION assignment_value PUNTO_COMA
    (21) select_statement -> . if_statement else_if_statement
    (22) select_statement -> . if_statement
    (20) while_statement -> . while logical_statement LLAVE_ABRE statements LLAVE_CIERRA
    (29) in_statement -> . in ID PUNTO_COMA
    (28) out_statement -> . out str_expression PUNTO_COMA
    (23) if_statement -> . if logical_statement LLAVE_ABRE statements LLAVE_CIERRA

    ID              shift and go to state 11
    while           shift and go to state 13
    in              shift and go to state 14
    out             shift and go to state 15
    if              shift and go to state 16

    statements                     shift and go to state 17
    statement                      shift and go to state 5
    assignment_statement           shift and go to state 6
    select_statement               shift and go to state 7
    while_statement                shift and go to state 8
    in_statement                   shift and go to state 9
    out_statement                  shift and go to state 10
    if_statement                   shift and go to state 12

state 3

    (2) program -> statements .
    (14) statements -> statements . statement
    (15) statement -> . assignment_statement
    (16) statement -> . select_statement
    (17) statement -> . while_statement
    (18) statement -> . in_statement
    (19) statement -> . out_statement
    (65) assignment_statement -> . ID OP_ASIGNACION assignment_value PUNTO_COMA
    (21) select_statement -> . if_statement else_if_statement
    (22) select_statement -> . if_statement
    (20) while_statement -> . while logical_statement LLAVE_ABRE statements LLAVE_CIERRA
    (29) in_statement -> . in ID PUNTO_COMA
    (28) out_statement -> . out str_expression PUNTO_COMA
    (23) if_statement -> . if logical_statement LLAVE_ABRE statements LLAVE_CIERRA

    $end            reduce using rule 2 (program -> statements .)
    ID              shift and go to state 11
    while           shift and go to state 13
    in              shift and go to state 14
    out             shift and go to state 15
    if              shift and go to state 16

    statement                      shift and go to state 18
    assignment_statement           shift and go to state 6
    select_statement               shift and go to state 7
    while_statement                shift and go to state 8
    in_statement                   shift and go to state 9
    out_statement                  shift and go to state 10
    if_statement                   shift and go to state 12

state 4

    (3) variables_block -> var . LLAVE_ABRE variables_list LLAVE_CIERRA

    LLAVE_ABRE      shift and go to state 19


state 5

    (13) statements -> statement .

    ID              reduce using rule 13 (statements -> statement .)
    while           reduce using rule 13 (statements -> statement .)
    in              reduce using rule 13 (statements -> statement .)
    out             reduce using rule 13 (statements -> statement .)
    if              reduce using rule 13 (statements -> statement .)
    $end            reduce using rule 13 (statements -> statement .)
    LLAVE_CIERRA    reduce using rule 13 (statements -> statement .)


state 6

    (15) statement -> assignment_statement .

    ID              reduce using rule 15 (statement -> assignment_statement .)
    while           reduce using rule 15 (statement -> assignment_statement .)
    in              reduce using rule 15 (statement -> assignment_statement .)
    out             reduce using rule 15 (statement -> assignment_statement .)
    if              reduce using rule 15 (statement -> assignment_statement .)
    $end            reduce using rule 15 (statement -> assignment_statement .)
    LLAVE_CIERRA    reduce using rule 15 (statement -> assignment_statement .)


state 7

    (16) statement -> select_statement .

    ID              reduce using rule 16 (statement -> select_statement .)
    while           reduce using rule 16 (statement -> select_statement .)
    in              reduce using rule 16 (statement -> select_statement .)
    out             reduce using rule 16 (statement -> select_statement .)
    if              reduce using rule 16 (statement -> select_statement .)
    $end            reduce using rule 16 (statement -> select_statement .)
    LLAVE_CIERRA    reduce using rule 16 (statement -> select_statement .)


state 8

    (17) statement -> while_statement .

    ID              reduce using rule 17 (statement -> while_statement .)
    while           reduce using rule 17 (statement -> while_statement .)
    in              reduce using rule 17 (statement -> while_statement .)
    out             reduce using rule 17 (statement -> while_statement .)
    if              reduce using rule 17 (statement -> while_statement .)
    $end            reduce using rule 17 (statement -> while_statement .)
    LLAVE_CIERRA    reduce using rule 17 (statement -> while_statement .)


state 9

    (18) statement -> in_statement .

    ID              reduce using rule 18 (statement -> in_statement .)
    while           reduce using rule 18 (statement -> in_statement .)
    in              reduce using rule 18 (statement -> in_statement .)
    out             reduce using rule 18 (statement -> in_statement .)
    if              reduce using rule 18 (statement -> in_statement .)
    $end            reduce using rule 18 (statement -> in_statement .)
    LLAVE_CIERRA    reduce using rule 18 (statement -> in_statement .)


state 10

    (19) statement -> out_statement .

    ID              reduce using rule 19 (statement -> out_statement .)
    while           reduce using rule 19 (statement -> out_statement .)
    in              reduce using rule 19 (statement -> out_statement .)
    out             reduce using rule 19 (statement -> out_statement .)
    if              reduce using rule 19 (statement -> out_statement .)
    $end            reduce using rule 19 (statement -> out_statement .)
    LLAVE_CIERRA    reduce using rule 19 (statement -> out_statement .)


state 11

    (65) assignment_statement -> ID . OP_ASIGNACION assignment_value PUNTO_COMA

    OP_ASIGNACION   shift and go to state 20


state 12

    (21) select_statement -> if_statement . else_if_statement
    (22) select_statement -> if_statement .
    (24) else_if_statement -> . else if_statement
    (25) else_if_statement -> . else_if_statement else if_statement
    (26) else_if_statement -> . else_if_statement else_statement

    ID              reduce using rule 22 (select_statement -> if_statement .)
    while           reduce using rule 22 (select_statement -> if_statement .)
    in              reduce using rule 22 (select_statement -> if_statement .)
    out             reduce using rule 22 (select_statement -> if_statement .)
    if              reduce using rule 22 (select_statement -> if_statement .)
    $end            reduce using rule 22 (select_statement -> if_statement .)
    LLAVE_CIERRA    reduce using rule 22 (select_statement -> if_statement .)
    else            shift and go to state 22

    else_if_statement              shift and go to state 21

state 13

    (20) while_statement -> while . logical_statement LLAVE_ABRE statements LLAVE_CIERRA
    (53) logical_statement -> . logical_expression
    (54) logical_statement -> . logical_expression op_logic logical_expression
    (55) logical_expression -> . OP_NOT logical_term
    (56) logical_expression -> . logical_term
    (57) logical_term -> . comparision
    (58) logical_term -> . between_statement
    (59) logical_term -> . cte_logic
    (45) comparision -> . expression op_comparision expression
    (46) comparision -> . str_expression op_comparision str_expression
    (64) between_statement -> . between PARENTESIS_ABRE ID COMA expression DOS_PUNTOS expression PARENTESIS_CIERRA
    (62) cte_logic -> . true
    (63) cte_logic -> . false
    (30) expression -> . expression OP_SUMA term
    (31) expression -> . expression OP_RESTA term
    (32) expression -> . OP_RESTA term
    (33) expression -> . term
    (41) str_expression -> . str_term OP_CONCAT str_term
    (42) str_expression -> . str_term
    (34) term -> . term OP_MULTIPLICACION factor
    (35) term -> . term OP_DIVISION factor
    (36) term -> . factor
    (43) str_term -> . CTE_STRING
    (44) str_term -> . ID
    (37) factor -> . CTE_NUMERICA
    (38) factor -> . CTE_REAL
    (39) factor -> . ID
    (40) factor -> . PARENTESIS_ABRE expression PARENTESIS_CIERRA

    OP_NOT          shift and go to state 25
    between         shift and go to state 32
    true            shift and go to state 35
    false           shift and go to state 36
    OP_RESTA        shift and go to state 38
    CTE_STRING      shift and go to state 41
    ID              shift and go to state 34
    CTE_NUMERICA    shift and go to state 42
    CTE_REAL        shift and go to state 43
    PARENTESIS_ABRE shift and go to state 33

    logical_statement              shift and go to state 23
    logical_expression             shift and go to state 24
    logical_term                   shift and go to state 26
    comparision                    shift and go to state 27
    between_statement              shift and go to state 28
    cte_logic                      shift and go to state 29
    expression                     shift and go to state 30
    str_expression                 shift and go to state 31
    term                           shift and go to state 37
    str_term                       shift and go to state 39
    factor                         shift and go to state 40

state 14

    (29) in_statement -> in . ID PUNTO_COMA

    ID              shift and go to state 44


state 15

    (28) out_statement -> out . str_expression PUNTO_COMA
    (41) str_expression -> . str_term OP_CONCAT str_term
    (42) str_expression -> . str_term
    (43) str_term -> . CTE_STRING
    (44) str_term -> . ID

    CTE_STRING      shift and go to state 41
    ID              shift and go to state 46

    str_expression                 shift and go to state 45
    str_term                       shift and go to state 39

state 16

    (23) if_statement -> if . logical_statement LLAVE_ABRE statements LLAVE_CIERRA
    (53) logical_statement -> . logical_expression
    (54) logical_statement -> . logical_expression op_logic logical_expression
    (55) logical_expression -> . OP_NOT logical_term
    (56) logical_expression -> . logical_term
    (57) logical_term -> . comparision
    (58) logical_term -> . between_statement
    (59) logical_term -> . cte_logic
    (45) comparision -> . expression op_comparision expression
    (46) comparision -> . str_expression op_comparision str_expression
    (64) between_statement -> . between PARENTESIS_ABRE ID COMA expression DOS_PUNTOS expression PARENTESIS_CIERRA
    (62) cte_logic -> . true
    (63) cte_logic -> . false
    (30) expression -> . expression OP_SUMA term
    (31) expression -> . expression OP_RESTA term
    (32) expression -> . OP_RESTA term
    (33) expression -> . term
    (41) str_expression -> . str_term OP_CONCAT str_term
    (42) str_expression -> . str_term
    (34) term -> . term OP_MULTIPLICACION factor
    (35) term -> . term OP_DIVISION factor
    (36) term -> . factor
    (43) str_term -> . CTE_STRING
    (44) str_term -> . ID
    (37) factor -> . CTE_NUMERICA
    (38) factor -> . CTE_REAL
    (39) factor -> . ID
    (40) factor -> . PARENTESIS_ABRE expression PARENTESIS_CIERRA

    OP_NOT          shift and go to state 25
    between         shift and go to state 32
    true            shift and go to state 35
    false           shift and go to state 36
    OP_RESTA        shift and go to state 38
    CTE_STRING      shift and go to state 41
    ID              shift and go to state 34
    CTE_NUMERICA    shift and go to state 42
    CTE_REAL        shift and go to state 43
    PARENTESIS_ABRE shift and go to state 33

    logical_statement              shift and go to state 47
    logical_expression             shift and go to state 24
    logical_term                   shift and go to state 26
    comparision                    shift and go to state 27
    between_statement              shift and go to state 28
    cte_logic                      shift and go to state 29
    expression                     shift and go to state 30
    str_expression                 shift and go to state 31
    term                           shift and go to state 37
    str_term                       shift and go to state 39
    factor                         shift and go to state 40

state 17

    (1) program -> variables_block statements .
    (14) statements -> statements . statement
    (15) statement -> . assignment_statement
    (16) statement -> . select_statement
    (17) statement -> . while_statement
    (18) statement -> . in_statement
    (19) statement -> . out_statement
    (65) assignment_statement -> . ID OP_ASIGNACION assignment_value PUNTO_COMA
    (21) select_statement -> . if_statement else_if_statement
    (22) select_statement -> . if_statement
    (20) while_statement -> . while logical_statement LLAVE_ABRE statements LLAVE_CIERRA
    (29) in_statement -> . in ID PUNTO_COMA
    (28) out_statement -> . out str_expression PUNTO_COMA
    (23) if_statement -> . if logical_statement LLAVE_ABRE statements LLAVE_CIERRA

    $end            reduce using rule 1 (program -> variables_block statements .)
    ID              shift and go to state 11
    while           shift and go to state 13
    in              shift and go to state 14
    out             shift and go to state 15
    if              shift and go to state 16

    statement                      shift and go to state 18
    assignment_statement           shift and go to state 6
    select_statement               shift and go to state 7
    while_statement                shift and go to state 8
    in_statement                   shift and go to state 9
    out_statement                  shift and go to state 10
    if_statement                   shift and go to state 12

state 18

    (14) statements -> statements statement .

    ID              reduce using rule 14 (statements -> statements statement .)
    while           reduce using rule 14 (statements -> statements statement .)
    in              reduce using rule 14 (statements -> statements statement .)
    out             reduce using rule 14 (statements -> statements statement .)
    if              reduce using rule 14 (statements -> statements statement .)
    $end            reduce using rule 14 (statements -> statements statement .)
    LLAVE_CIERRA    reduce using rule 14 (statements -> statements statement .)


state 19

    (3) variables_block -> var LLAVE_ABRE . variables_list LLAVE_CIERRA
    (4) variables_list -> . variables_list variable_declaration
    (5) variables_list -> . variable_declaration
    (6) variable_declaration -> . variable_type variables_names PUNTO_COMA
    (9) variable_type -> . int
    (10) variable_type -> . real
    (11) variable_type -> . string
    (12) variable_type -> . bool

    int             shift and go to state 51
    real            shift and go to state 52
    string          shift and go to state 53
    bool            shift and go to state 54

    variables_list                 shift and go to state 48
    variable_declaration           shift and go to state 49
    variable_type                  shift and go to state 50

state 20

    (65) assignment_statement -> ID OP_ASIGNACION . assignment_value PUNTO_COMA
    (66) assignment_value -> . ternary
    (67) assignment_value -> . expression
    (68) assignment_value -> . str_expression
    (69) assignment_value -> . logical_statement
    (70) ternary -> . logical_statement CONDICION_TERNARIA expression DOS_PUNTOS expression
    (71) ternary -> . logical_statement CONDICION_TERNARIA str_expression DOS_PUNTOS str_expression
    (30) expression -> . expression OP_SUMA term
    (31) expression -> . expression OP_RESTA term
    (32) expression -> . OP_RESTA term
    (33) expression -> . term
    (41) str_expression -> . str_term OP_CONCAT str_term
    (42) str_expression -> . str_term
    (53) logical_statement -> . logical_expression
    (54) logical_statement -> . logical_expression op_logic logical_expression
    (34) term -> . term OP_MULTIPLICACION factor
    (35) term -> . term OP_DIVISION factor
    (36) term -> . factor
    (43) str_term -> . CTE_STRING
    (44) str_term -> . ID
    (55) logical_expression -> . OP_NOT logical_term
    (56) logical_expression -> . logical_term
    (37) factor -> . CTE_NUMERICA
    (38) factor -> . CTE_REAL
    (39) factor -> . ID
    (40) factor -> . PARENTESIS_ABRE expression PARENTESIS_CIERRA
    (57) logical_term -> . comparision
    (58) logical_term -> . between_statement
    (59) logical_term -> . cte_logic
    (45) comparision -> . expression op_comparision expression
    (46) comparision -> . str_expression op_comparision str_expression
    (64) between_statement -> . between PARENTESIS_ABRE ID COMA expression DOS_PUNTOS expression PARENTESIS_CIERRA
    (62) cte_logic -> . true
    (63) cte_logic -> . false

    OP_RESTA        shift and go to state 38
    CTE_STRING      shift and go to state 41
    ID              shift and go to state 34
    OP_NOT          shift and go to state 25
    CTE_NUMERICA    shift and go to state 42
    CTE_REAL        shift and go to state 43
    PARENTESIS_ABRE shift and go to state 33
    between         shift and go to state 32
    true            shift and go to state 35
    false           shift and go to state 36

    assignment_value               shift and go to state 55
    ternary                        shift and go to state 56
    expression                     shift and go to state 57
    str_expression                 shift and go to state 58
    logical_statement              shift and go to state 59
    term                           shift and go to state 37
    str_term                       shift and go to state 39
    logical_expression             shift and go to state 24
    factor                         shift and go to state 40
    logical_term                   shift and go to state 26
    comparision                    shift and go to state 27
    between_statement              shift and go to state 28
    cte_logic                      shift and go to state 29

state 21

    (21) select_statement -> if_statement else_if_statement .
    (25) else_if_statement -> else_if_statement . else if_statement
    (26) else_if_statement -> else_if_statement . else_statement
    (27) else_statement -> . else LLAVE_ABRE statements LLAVE_CIERRA

    ID              reduce using rule 21 (select_statement -> if_statement else_if_statement .)
    while           reduce using rule 21 (select_statement -> if_statement else_if_statement .)
    in              reduce using rule 21 (select_statement -> if_statement else_if_statement .)
    out             reduce using rule 21 (select_statement -> if_statement else_if_statement .)
    if              reduce using rule 21 (select_statement -> if_statement else_if_statement .)
    $end            reduce using rule 21 (select_statement -> if_statement else_if_statement .)
    LLAVE_CIERRA    reduce using rule 21 (select_statement -> if_statement else_if_statement .)
    else            shift and go to state 60

    else_statement                 shift and go to state 61

state 22

    (24) else_if_statement -> else . if_statement
    (23) if_statement -> . if logical_statement LLAVE_ABRE statements LLAVE_CIERRA

    if              shift and go to state 16

    if_statement                   shift and go to state 62

state 23

    (20) while_statement -> while logical_statement . LLAVE_ABRE statements LLAVE_CIERRA

    LLAVE_ABRE      shift and go to state 63


state 24

    (53) logical_statement -> logical_expression .
    (54) logical_statement -> logical_expression . op_logic logical_expression
    (60) op_logic -> . OP_OR
    (61) op_logic -> . OP_AND

    LLAVE_ABRE      reduce using rule 53 (logical_statement -> logical_expression .)
    CONDICION_TERNARIA reduce using rule 53 (logical_statement -> logical_expression .)
    PUNTO_COMA      reduce using rule 53 (logical_statement -> logical_expression .)
    OP_OR           shift and go to state 65
    OP_AND          shift and go to state 66

    op_logic                       shift and go to state 64

state 25

    (55) logical_expression -> OP_NOT . logical_term
    (57) logical_term -> . comparision
    (58) logical_term -> . between_statement
    (59) logical_term -> . cte_logic
    (45) comparision -> . expression op_comparision expression
    (46) comparision -> . str_expression op_comparision str_expression
    (64) between_statement -> . between PARENTESIS_ABRE ID COMA expression DOS_PUNTOS expression PARENTESIS_CIERRA
    (62) cte_logic -> . true
    (63) cte_logic -> . false
    (30) expression -> . expression OP_SUMA term
    (31) expression -> . expression OP_RESTA term
    (32) expression -> . OP_RESTA term
    (33) expression -> . term
    (41) str_expression -> . str_term OP_CONCAT str_term
    (42) str_expression -> . str_term
    (34) term -> . term OP_MULTIPLICACION factor
    (35) term -> . term OP_DIVISION factor
    (36) term -> . factor
    (43) str_term -> . CTE_STRING
    (44) str_term -> . ID
    (37) factor -> . CTE_NUMERICA
    (38) factor -> . CTE_REAL
    (39) factor -> . ID
    (40) factor -> . PARENTESIS_ABRE expression PARENTESIS_CIERRA

    between         shift and go to state 32
    true            shift and go to state 35
    false           shift and go to state 36
    OP_RESTA        shift and go to state 38
    CTE_STRING      shift and go to state 41
    ID              shift and go to state 34
    CTE_NUMERICA    shift and go to state 42
    CTE_REAL        shift and go to state 43
    PARENTESIS_ABRE shift and go to state 33

    logical_term                   shift and go to state 67
    comparision                    shift and go to state 27
    between_statement              shift and go to state 28
    cte_logic                      shift and go to state 29
    expression                     shift and go to state 30
    str_expression                 shift and go to state 31
    term                           shift and go to state 37
    str_term                       shift and go to state 39
    factor                         shift and go to state 40

state 26

    (56) logical_expression -> logical_term .

    OP_OR           reduce using rule 56 (logical_expression -> logical_term .)
    OP_AND          reduce using rule 56 (logical_expression -> logical_term .)
    LLAVE_ABRE      reduce using rule 56 (logical_expression -> logical_term .)
    CONDICION_TERNARIA reduce using rule 56 (logical_expression -> logical_term .)
    PUNTO_COMA      reduce using rule 56 (logical_expression -> logical_term .)


state 27

    (57) logical_term -> comparision .

    OP_OR           reduce using rule 57 (logical_term -> comparision .)
    OP_AND          reduce using rule 57 (logical_term -> comparision .)
    LLAVE_ABRE      reduce using rule 57 (logical_term -> comparision .)
    CONDICION_TERNARIA reduce using rule 57 (logical_term -> comparision .)
    PUNTO_COMA      reduce using rule 57 (logical_term -> comparision .)


state 28

    (58) logical_term -> between_statement .

    OP_OR           reduce using rule 58 (logical_term -> between_statement .)
    OP_AND          reduce using rule 58 (logical_term -> between_statement .)
    LLAVE_ABRE      reduce using rule 58 (logical_term -> between_statement .)
    CONDICION_TERNARIA reduce using rule 58 (logical_term -> between_statement .)
    PUNTO_COMA      reduce using rule 58 (logical_term -> between_statement .)


state 29

    (59) logical_term -> cte_logic .

    OP_OR           reduce using rule 59 (logical_term -> cte_logic .)
    OP_AND          reduce using rule 59 (logical_term -> cte_logic .)
    LLAVE_ABRE      reduce using rule 59 (logical_term -> cte_logic .)
    CONDICION_TERNARIA reduce using rule 59 (logical_term -> cte_logic .)
    PUNTO_COMA      reduce using rule 59 (logical_term -> cte_logic .)


state 30

    (45) comparision -> expression . op_comparision expression
    (30) expression -> expression . OP_SUMA term
    (31) expression -> expression . OP_RESTA term
    (47) op_comparision -> . COMP_MENOR
    (48) op_comparision -> . COMP_MAYOR
    (49) op_comparision -> . COMP_MENOR_IGUAL
    (50) op_comparision -> . COMP_MAYOR_IGUAL
    (51) op_comparision -> . COMP_IGUAL
    (52) op_comparision -> . COMP_DISTINTO

    OP_SUMA         shift and go to state 69
    OP_RESTA        shift and go to state 70
    COMP_MENOR      shift and go to state 71
    COMP_MAYOR      shift and go to state 72
    COMP_MENOR_IGUAL shift and go to state 73
    COMP_MAYOR_IGUAL shift and go to state 74
    COMP_IGUAL      shift and go to state 75
    COMP_DISTINTO   shift and go to state 76

    op_comparision                 shift and go to state 68

state 31

    (46) comparision -> str_expression . op_comparision str_expression
    (47) op_comparision -> . COMP_MENOR
    (48) op_comparision -> . COMP_MAYOR
    (49) op_comparision -> . COMP_MENOR_IGUAL
    (50) op_comparision -> . COMP_MAYOR_IGUAL
    (51) op_comparision -> . COMP_IGUAL
    (52) op_comparision -> . COMP_DISTINTO

    COMP_MENOR      shift and go to state 71
    COMP_MAYOR      shift and go to state 72
    COMP_MENOR_IGUAL shift and go to state 73
    COMP_MAYOR_IGUAL shift and go to state 74
    COMP_IGUAL      shift and go to state 75
    COMP_DISTINTO   shift and go to state 76

    op_comparision                 shift and go to state 77

state 32

    (64) between_statement -> between . PARENTESIS_ABRE ID COMA expression DOS_PUNTOS expression PARENTESIS_CIERRA

    PARENTESIS_ABRE shift and go to state 78


state 33

    (40) factor -> PARENTESIS_ABRE . expression PARENTESIS_CIERRA
    (30) expression -> . expression OP_SUMA term
    (31) expression -> . expression OP_RESTA term
    (32) expression -> . OP_RESTA term
    (33) expression -> . term
    (34) term -> . term OP_MULTIPLICACION factor
    (35) term -> . term OP_DIVISION factor
    (36) term -> . factor
    (37) factor -> . CTE_NUMERICA
    (38) factor -> . CTE_REAL
    (39) factor -> . ID
    (40) factor -> . PARENTESIS_ABRE expression PARENTESIS_CIERRA

    OP_RESTA        shift and go to state 38
    CTE_NUMERICA    shift and go to state 42
    CTE_REAL        shift and go to state 43
    ID              shift and go to state 80
    PARENTESIS_ABRE shift and go to state 33

    expression                     shift and go to state 79
    term                           shift and go to state 37
    factor                         shift and go to state 40

state 34

    (44) str_term -> ID .
    (39) factor -> ID .
